# ha-autocode-search

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: hassfest.yml  quality.yml  requirements-dev.txt  tests.yml
custom_components/autocode_search/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  services.py  services.yaml  strings.json  success_workflow.py
docker/: README.md  docker-compose.yml
docker/config/: configuration.yaml  secrets.yaml
docs/: architecture.md  broadlink_protocol.md  compatibility.md  profiling.md  release_checklist.md  release_notes_v1.md  roadmap.md
examples/: automations.yaml  entities.yaml  lovelace-dashboard.yaml  scripts.yaml
tests/: conftest.py  ha_stubs.py  test_binary_sensor.py  test_config_flow.py  test_confirmation.py  test_coordinator.py  test_examples.py  test_home_assistant_remote_adapter.py  test_provider_factory.py  test_provider_filtering.py  test_release_tools.py  test_search_engine.py  test_search_filter.py  test_search_session.py  test_sensor.py  test_services.py
tests/memory/: test_success_memory.py
tests/providers/: test_composite_provider.py  test_irdb_provider.py  test_lirc_provider.py  test_provider_ranking.py  test_smartir_provider.py
tests/storage/: test_storage_backend.py  test_success_memory_integration.py  test_success_repository.py
tools/: benchmark.py  coverage.sh  release_check.py
(+32 files in other folders)
