[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-autocode-search"
version = "0.2.0"
description = "AutoCode Search integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Roger Paternina" }
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]