[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-autocode-search"
version = "1.0.0-rc1"
description = "AutoCode Search integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Roger Paternina" }
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]